--- a/index.html
+++ b/index.html
@@ -2,15 +2,6 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <script>
-    // 주소창에서 key 가져오기
-    const params = new URLSearchParams(window.location.search);
-    const appKey = params.get('key');
-
-    const script = document.createElement('script');
-    script.src = `https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=${appKey}`;
-    document.head.appendChild(script);
-  </script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; }
     #map_div { width: 100%; height: 100%; }
@@ -18,19 +9,30 @@
 </head>
 <body>
   <div id="map_div"></div>
+
   <script>
-    let map;
-    const checkTmapLoaded = setInterval(() => {
-      if (typeof Tmapv2 !== 'undefined') {
-        clearInterval(checkTmapLoaded);
-        map = new Tmapv2.Map("map_div", {
-          center: new Tmapv2.LatLng(37.5665, 126.9780),
-          width: "100%",
-          height: "100%",
-          zoom: 15
-        });
-      }
-    }, 200);
+    // URL에서 key 추출
+    const params = new URLSearchParams(window.location.search);
+    const appKey = params.get('key');
+
+    if (!appKey) {
+      alert("API 키가 없습니다. URL에 ?key=YOUR_KEY 형식으로 접근해야 합니다.");
+    }
+
+    // Tmap 스크립트 삽입
+    const script = document.createElement('script');
+    script.src = `https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=${appKey}`;
+    script.onload = () => {
+      // Tmap 스크립트 로드 완료 후 맵 생성
+      const map = new Tmapv2.Map("map_div", {
+        center: new Tmapv2.LatLng(37.5665, 126.9780),
+        width: "100%",
+        height: "100%",
+        zoom: 15
+      });
+    };
+
+    document.head.appendChild(script);
   </script>
 </body>
 </html>
