--- a/index.html
+++ b/index.html
@@ -11,27 +11,25 @@
   <div id="map_div"></div>
 
   <script>
-    // URL에서 key 추출
     const params = new URLSearchParams(window.location.search);
     const appKey = params.get('key');
 
     if (!appKey) {
-      alert("API 키가 없습니다. URL에 ?key=YOUR_KEY 형식으로 접근해야 합니다.");
+      alert("API 키가 없습니다. URL에 ?key=YOUR_APP_KEY 를 붙여주세요.");
     }
 
-    // Tmap 스크립트 삽입
-    const script = document.createElement('script');
+    const script = document.createElement("script");
     script.src = `https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=${appKey}`;
     script.onload = () => {
-      // Tmap 스크립트 로드 완료 후 맵 생성
+      console.log("Tmap 스크립트 로드 완료");
+
       const map = new Tmapv2.Map("map_div", {
-        center: new Tmapv2.LatLng(37.5665, 126.9780),
+        center: new Tmapv2.LatLng(37.5665, 126.9780), // 서울 시청
         width: "100%",
         height: "100%",
         zoom: 15
       });
     };
-
     document.head.appendChild(script);
   </script>
 </body>
