--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
+  <script>
+    // URL에서 key 가져오기
+    const params = new URLSearchParams(window.location.search);
+    const appKey = params.get('key');
+
+    // Tmap API 스크립트 추가
+    const script = document.createElement('script');
+    script.src = `https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=${appKey}`;
+
+    // API가 로드된 후 실행될 코드
+    script.onload = function() {
+      let map = new Tmapv2.Map("map_div", {
+        center: new Tmapv2.LatLng(37.5665, 126.9780),  // 서울시의 위도, 경도
+        width: "100%",
+        height: "100%",
+        zoom: 15
+      });
+    };
+
+    document.head.appendChild(script);
+  </script>
   <style>
     html, body { margin: 0; padding: 0; height: 100%; }
     #map_div { width: 100%; height: 100%; }
@@ -9,28 +30,5 @@
 </head>
 <body>
   <div id="map_div"></div>
-
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const appKey = params.get('key');
-
-    if (!appKey) {
-      alert("API 키가 없습니다. URL에 ?key=YOUR_APP_KEY 를 붙여주세요.");
-    }
-
-    const script = document.createElement("script");
-    script.src = `https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=${appKey}`;
-    script.onload = () => {
-      console.log("Tmap 스크립트 로드 완료");
-
-      const map = new Tmapv2.Map("map_div", {
-        center: new Tmapv2.LatLng(37.5665, 126.9780), // 서울 시청
-        width: "100%",
-        height: "100%",
-        zoom: 15
-      });
-    };
-    document.head.appendChild(script);
-  </script>
 </body>
 </html>
