--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
     const script = document.createElement('script');
     script.src = `https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=${appKey}`;
 
-    // 스크립트가 로드된 후, Tmapv2가 실제 존재할 때까지 기다려서 실행
     script.onload = () => {
-      console.log("Tmap 스크립트 로드 완료");
+      console.log("✅ Tmap 스크립트 로드 완료");
 
+      // Tmapv2가 로드되었는지 반복 체크
       const waitForTmap = setInterval(() => {
-        if (typeof Tmapv2 !== 'undefined' && Tmapv2.Map) {
+        if (typeof Tmapv2 !== 'undefined' && typeof Tmapv2.LatLng !== 'undefined') {
           clearInterval(waitForTmap);
 
+          // 여기서 Tmapv2를 안전하게 사용 가능
           const map = new Tmapv2.Map("map_div", {
             center: new Tmapv2.LatLng(37.5665, 126.9780),
             width: "100%",
             height: "100%",
             zoom: 15
           });
+
+          console.log("🗺️ 지도 생성 완료");
         }
       }, 100);
     };
